# starlark

./: .gitignore  BUILD  MODULE.bazel  extensions.bzl  maven_starlark_test_suite_install.json
.devcontainer/: devcontainer.json
test_suite/: BUILD
