module(
    name = "starlark_test_suite",
    version = "",
)

bazel_dep(
    name = "gazelle",
    version = "0.30.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)
bazel_dep(
    name = "rules_go",
    version = "0.39.1",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "4.5",
)
bazel_dep(
    name = "rules_pkg",
    version = "0.7.0",
)
bazel_dep(
    name = "rules_proto",
    version = "5.3.0-21.7",
)
bazel_dep(
    name = "rules_python",
    version = "0.22.1",
)
# -- bazel_dep definitions -- #

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.19.3",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "go.starlark.net",
    sum = "h1:Ov1cvc58UF3b5XjBnZv7+opcTcQFZebYjWzi34vdm4Q=",
    version = "v0.0.0-20240311180835-efac67204ba7",
)
use_repo(
    go_deps,
    "net_starlark_go",
)

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(
    non_module_dependencies,
    "io_bazel",
    "starlark-rust",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_starlark_test_suite",
    artifacts = [
        "com.google.guava:guava:31.1-jre",
        "com.google.errorprone:error_prone_type_annotations:2.16",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.github.stephenc.jcip:jcip-annotations:1.0-1",
    ],
    lock_file = "//:maven_starlark_test_suite_install.json",
    repositories = [
        "https://dl.google.com/android/maven2",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(
    maven,
    "maven_starlark_test_suite",
    "unpinned_maven_starlark_test_suite",
)